Returns lat lon coordinate of the semantic address

--- a/mockup/static/index.html
+++ b/mockup/static/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB-4nNRrD5Z1wLdD1YUw8buAcHRCXGPWrA&sensor=true"></script>
 <script type="text/javascript" src="../js/jquery-1.7.1.min.js"></script>
 <script type="text/javascript" src="../js/base.js"></script>
 <link rel="stylesheet" type="text/css" href="../css/base.css" />
