--- a/mockup/static/index.html
+++ b/mockup/static/index.html
@@ -7,13 +7,15 @@
 </head>
 <body>
 <div id="container">
+	<h2>XXX Tunes Into the Most Interesting Event in Your Vicinity</h2>
 	<form id="search_box" name="search_box">
 	    <div class="wrapper">
 	        <input type="text" id="search" name="search" placeholder="Enter in New Location" />
 	    </div>
 	</form>
-	        <!--<button type="submit" class="search_btn"><img src="../artwork/search_icon.png" title="Search" /></button>-->
-  <div id="map"></div>
+	<center><h3>Your Current Search Radius is 100ft</h3></center>
+	<div id="map"></div>
+	<!--<button type="submit" class="search_btn"><img src="../artwork/search_icon.png" title="Search" /></button>--!>
 </div>
 </body>
 </html>
