Uploaded as a barf on paper

--- a/mockup/static/views.html
+++ b/mockup/static/views.html
@@ -3,8 +3,23 @@
 <link rel="stylesheet" type="text/css" href="../css/views.css" />
 </head>
 <body>
-<div id="icon"><img src="../artwork/treeship.png"></div>
-<div id="photo_view"></div>
-<div id="text_view"><h1>This is just a text, you know like a tweet</h1></div>
+<div id="header">
+  <div id="icon"><img src="../artwork/treeship.png"></div>
+  <div id="headline">
+    <h2>Angel Hackathon Wows the Kendall Square Clientele</h2>
+  </div>
+</div>
+<div class="photo_view"><img src="../css/01.jpg"></div>
+<div id = "overlayB">
+  <div class="text_view"><h1>This is just a text, you know like a tweet</h1></div>
+  <div class="text_view"><h2>This is just a text, you know like a tweet</h2></div>
+  <div class="text_view"><h3>This is just a text, you know like a tweet</h3></div>
+</div>
+<div id="background-text">
+This is just a shitload of text In publishing and graphic design, lorem ipsum[1] is placeholder text (filler text) commonly used to demonstrate the graphics elements of a document or visual presentation, such as font, typography, and layout. The lorem ipsum text is typically a section of a Latin text by Cicero with words altered, added and removed that make it nonsensical in meaning and not proper Latin.[1]
+Even though "lorem ipsum" may arouse curiosity because of its resemblance to classical Latin, it is not intended to have meaning. Where text is comprehensible in a document, people tend to focus on the textual content rather than upon overall presentation,[citation needed] so publishers use lorem ipsum when displaying a typeface or design elements and page layout in order to direct the focus to the publication style and not the meaning of the text. In spite of its basis in Latin, use of lorem ipsum is often referred to as greeking, from the phrase "it's all Greek to me," which indicates that this is not meant to be readable text.[2] In publishing and graphic design, lorem ipsum[1] is placeholder text (filler text) commonly used to demonstrate the graphics elements of a document or visual presentation, such as font, typography, and layout. The lorem ipsum text is typically a section of a Latin text by Cicero with words altered, added and removed that make it nonsensical in meaning and not proper Latin.[1]
+Even though "lorem ipsum" may arouse curiosity because of its resemblance to classical Latin, it is not intended to have meaning. Where text is comprehensible in a document, people tend to focus on the textual content rather than upon overall presentation,[citation needed] so publishers use lorem ipsum when displaying a typeface or design elements and page layout in order to direct the focus to the publication style and not the meaning of the text. In spite of its basis in Latin, use of lorem ipsum is often referred to as greeking, from the phrase "it's all Greek to me," which indicates that this is not meant to be readable text.[2]
+</div>
+
 </body>
 </html>
